# stackexchangeparser

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  collectiontest.py  comments.py  datetest.py  example.py  posts.py  pyproject.toml  requirements-dev.txt  requirements.txt  stackexchange_convert.py  stackexchange_posthistory.py  stackexchangeparser.py  stackexchangetocsv.py  stackexchangetoparquet.py  stackoverflow_users.py  test.py
SQLServer/: Badges.sql  Comments.sql  PostHistory.sql  PostHistoryTypes.sql  PostLinks.sql  PostTypes.sql  Posts.sql  Tags.sql  Users.sql  VoteTypes.sql  Votes.sql  bulkinsert.sql
config/: tables.yaml
data/: LinkTypes.csv  PostHistoryTypes.csv  PostTypes.csv  VoteTypes.csv
stackexchange_parser/: __init__.py  cli.py  core.py  writers.py
tests/: __init__.py  conftest.py  test_cli.py  test_core.py  test_integration.py  test_writers.py
